--- a/guide.html
+++ b/guide.html
@@ -53,7 +53,7 @@
 <main class="guide-layout-container">
   
   <div class="guide-image-column">
-    <img src="C:\Users\pc\Desktop\capstone WEBSITE\guidepic2.jpg" alt="Data center guide visual">
+    <img src="guidepic2.jpg" alt="Data center guide visual">
   </div>
   
   <div class="guide-content-column">
@@ -82,4 +82,5 @@
     
   <footer><div class="container"><p>&copy; 2025 Smart Datacenter Siting , All rights reserved.</p></div></footer>
 </body>
+
 </html>
