--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </div>
   </div>
   <div class="hero-image">
-    <img src="C:\Users\pc\Desktop\capstone WEBSITE\homepic.jpg" alt="Data Center Illustration">
+    <img src="homepic.jpg" alt="Data Center Illustration">
   </div>
 </main>
 
@@ -41,3 +41,4 @@
   
 </body>
 </html>
+
