Modify city list and improve HTML structure
Updated city list and fixed formatting issues.

--- a/cities.html
+++ b/cities.html
@@ -7,7 +7,7 @@
   <script>
     const cities = [
       "New York, NY","Los Angeles, CA","Chicago, IL","Phoenix, AZ",
-      "Las Vegas , NV" , "Denton , TX" , "Billington , MT" , "San Diego , CA" , "Kodiak , AK" , "Aspen , CO" , 
+      "Las Vegas , NV" , "Denton , TX" , "Billington , MT" , "San Diego , CA" , "Chandler , AK" , "Aspen , CO" , 
       "Dodge City , KS" , "San Francisco , CA" , "Greensburg , KS" , "Honolulu , HI" , "Albuquerque  , NM" , "San Jose , CA" , 
       "Tucson , AZ" , "Reno , NV" , "El Paso , TX" , "Salt Lake City , UT"
     ];
@@ -75,3 +75,4 @@
     <footer><div class="container"><p>&copy; 2025 Smart Datacenter Siting , All rights reserved.</p></div></footer>
 </body>
 </html>
+
