--- a/about.html
+++ b/about.html
@@ -85,6 +85,12 @@
 
           
         </div>
+                <!-- Member 4 (NEW) -->
+<div class="team-member" style="text-align: center;">
+    <img src="dr.jpg" alt="Team Member 1 Photo">
+    <h2>Capstone project advisor</h2>
+    <h3>Capstone project advisor</h3>
+</div>
         
       </div>
     </div>
@@ -95,5 +101,6 @@
 </body>
 
 </html>
+
 
 
