Update team members and project advisor details
Added new team members Najah Elnairab and Hiba Sirelkhatim, and updated the project advisor's name.

--- a/about.html
+++ b/about.html
@@ -86,10 +86,10 @@
           
         </div>
                 <!-- Member 4 (NEW) -->
-<div class="team-member" style="text-align: center;">
+<div class="dr" style="text-align: center;">
     <img src="dr.jpg" alt="Team Member 1 Photo">
     <h2>Capstone project advisor</h2>
-    <h3>Capstone project advisor</h3>
+    <h3>Dr. Maisam Wahbah </h3>
 </div>
         
       </div>
@@ -101,6 +101,7 @@
 </body>
 
 </html>
+
 
 
 
