--- a/about.html
+++ b/about.html
@@ -90,6 +90,9 @@
     <img src="dr.jpg" alt="Team Member 1 Photo">
     <h2>Capstone project advisor</h2>
     <h3>Dr. Maisam Wahbah </h3>
+   <h4>Email: mwahbah@ud.ac.ae</h4>
+
+  
 </div>
         
       </div>
@@ -101,6 +104,7 @@
 </body>
 
 </html>
+
 
 
 
