--- a/about.html
+++ b/about.html
@@ -86,7 +86,7 @@
           
         </div>
                 <!-- Member 4 (NEW) -->
-<div class="dr" style="text-align: center;">
+<div class="dr" width="150" height="150" style="text-align: center;">
     <img src="dr.jpg" alt="Team Member 1 Photo">
     <h2>Capstone project advisor</h2>
     <h3>Dr. Maisam Wahbah </h3>
@@ -104,6 +104,7 @@
 </body>
 
 </html>
+
 
 
 
