--- a/result.html
+++ b/result.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Result · Smart Datacenter Siting</title>
+  <title>Result Â· Smart Datacenter Siting</title>
   
   <link rel="stylesheet" href="uploadstyle.css?v=99"> 
   
@@ -11,7 +11,6 @@
       const yes = Math.random()>0.5;
       document.getElementById('decision').textContent = yes ? 'YES' : 'NO';
       document.getElementById('decision').className = 'badge ' + (yes?'tag-yes':'tag-no');
-      document.getElementById('confidence').textContent = (70+Math.random()*25).toFixed(0)+'%';
       
       const reasons = yes
         ? ['High solar resource (GHI/DNI)','Moderate temperature profile','Stable wind speeds']
@@ -171,8 +170,8 @@
     <div class="card"> <div class="h2">Recommendation for <span id="city">Your City</span></div>
       
       <div class="decision-confidence-group">
-        <span id="decision" class="badge">—</span>
-        <p>Confidence: <span id="confidence" class="badge">—</span></p>
+        <span id="decision" class="badge">â€”</span>
+        <p>Confidence: <span id="confidence" class="badge">â€”</span></p>
       </div>
 
       <p id="reasons-heading" class="reasons-heading">Key Factors:</p>
@@ -188,4 +187,5 @@
 
     <footer><div class="container"><p>&copy; 2025 Smart Datacenter Siting , All rights reserved.</p></div></footer>
 </body>
+
 </html>
