--- a/upload.html
+++ b/upload.html
@@ -40,7 +40,7 @@
     }
     function goResult(){
       if(localStorage.uploadOk==='1'){ window.location.href='result.html'; }
-      else alert('Please fix schema issues before continuing (use the Guide’s list).');
+      else alert('Please fix schema issues before continuing (use the Guideâ€™s list).');
     }
   </script>
 </head>
@@ -111,11 +111,12 @@
 
       <div class="button-group">
         <a class="btn" href="guide.html">Back to Guide</a>
-        <button class="btn primary" onclick="goResult()">Run Analysis &rarr;</button>
+        <button class="btn primary" onclick="goResult()">Run Analysis </button>
       </div>
     </div>
   </main>
 
   <footer><div class="container"><p>&copy; 2025 Smart Datacenter Siting , All rights reserved.</p></div></footer>
 </body>
+
 </html>
